#86: Fixed `attach-javadocs` module problem.