@@ -177,6 +177,19 @@
                     </excludeVulnerabilityIds>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <additionalOptions>
+                        <option>--add-modules</option>
+                        <option>java.sql</option>
+                        <option>--add-reads</option>
+                        <option>jakarta.json=java.sql</option>
+                    </additionalOptions>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <parent>
